--- a/src/components/Filters/filters.module.css
+++ b/src/components/Filters/filters.module.css
@@ -6,6 +6,7 @@
   text-transform: uppercase;
   text-align: center;
   font-size: 18px;
+  font-weight: bold;
   color: rgb(250, 200, 35);
 }
 
@@ -16,14 +17,16 @@
   padding: 0 0 0 15px;
   margin: 50px auto 0;
   font-family: 'Roboto', sans-serif;
-  text-transform: uppercase;
+
   box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
   border-width: 0;
   border-radius: 20px;
-  background-color: rgb(203, 207, 207);
+
+  color: #fff;
+  background-color: #141e30;
   cursor: pointer;
 }
 
 .input:hover {
-  box-shadow: 4px 4px 8px 0px rgb(43, 33, 175);
+  box-shadow: 4px 4px 8px 0px #03e9f4;
 }
