--- a/src/components/ContactList/contacts.module.css
+++ b/src/components/ContactList/contacts.module.css
@@ -1,40 +1,40 @@
 .list {
   list-style: none;
   max-width: 400px;
-  padding: 40px 50px;
-  margin: 50px auto 0;
+  padding: 40px;
+  margin: 50px auto;
 }
 
 .btn {
   display: inline-block;
-  width: 30%;
-
+  color: rgb(86, 173, 173);
   border-width: 0;
   line-height: 40px;
   border-radius: 20px;
-  text-transform: uppercase;
   font-size: 14px;
-  background-color: rgb(203, 207, 207);
+  font-weight: bold;
+  background: #141e30;
   cursor: pointer;
 }
 
 .btn:hover {
-  box-shadow: 4px 4px 8px 0px rgb(43, 33, 175);
+  box-shadow: 4px 4px 8px 0px #03e9f4;
 }
 
 .item {
+  outline: #141e30 solid 5px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   border-radius: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  padding: 5px;
 }
 
 .name {
-  display: block;
-  padding: 0 15px;
-  font-family: 'Roboto', sans-serif;
-  color: black;
-  font-size: 15px;
+  font-family: sans-serif;
+
+  color: rgb(86, 173, 173);
+  font-size: 16px;
   font-weight: bold;
 }
