--- a/src/Views/ViewsStyles/homeView.module.css
+++ b/src/Views/ViewsStyles/homeView.module.css
@@ -2,6 +2,7 @@
   text-align: center;
   margin: 0;
   font-family: sans-serif;
+  color: #f50057;
 }
 
 .title_text {
@@ -10,4 +11,5 @@
   font-weight: bold;
   font-family: sans-serif;
   font-size: 20px;
+  color: #5a584fec;
 }
